a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cheuk_siow/invalidtype5.min
# Invalid type program 5: add string with float.

var x: string;
var y: float;
var z: string;

x = "10";
y = 1.0;
z = x + y;

